Atualizado e sem erros no compilador no modulo common.